--- a/MVC_SQL_Project/Web.config
+++ b/MVC_SQL_Project/Web.config
@@ -11,7 +11,8 @@
       requirePermission="false"/>
   </configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=IN-5CG0251NDQ;AttachDbFilename=|DataDirectory|Timesheet.mdf;Initial Catalog=aspnet-TimesheetPrj-20200930010642;Integrated Security=True"
+		<add name="DefaultConnection" connectionString="Data Source=IN-5CG0251NDQ;AttachDbFilename=|DataDirectory|Timesheet.mdf;
+			 Initial Catalog=aspnet-TimesheetPrj-20200930010642;Integrated Security=True"
       providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
